full-moon/tests/cases/fail/tokenizer/wrong-place-shebang/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/tokenizer/wrong-place-shebang
---
error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:1
  │
2 │ #!/usr/bin/env luajit
  │ ^

error[tokenizer]: unexpected character ! (2:2 to 2:3)
  ┌─ source.lua:2:2
  │
2 │ #!/usr/bin/env luajit
  │  ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:3
  │
2 │ #!/usr/bin/env luajit
  │   ^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:2:7
  │
2 │ #!/usr/bin/env luajit
  │       ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:7
  │
2 │ #!/usr/bin/env luajit
  │       ^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:2:11
  │
2 │ #!/usr/bin/env luajit
  │           ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:11
  │
2 │ #!/usr/bin/env luajit
  │           ^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:2:16
  │
2 │ #!/usr/bin/env luajit
  │                ^^^^^^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:4:1
  │
4 │ print("hello");
  │ ^^^^^


